# opencv_helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  helper.cpp
android/src/main/java/com/riguz/opencv_helper/: FlutterCallExecutor.java  Invokable.java  InvokeContext.java  InvokeException.java  OpenCVBinding.java  OpenCVHelperPlugin.java  OpencvHelperPlugin.java  Param.java
android/src/main/java/com/riguz/opencv_helper/camera/: Camera.java  CameraPermissions.java  CameraUtils.java  ResolutionPreset.java
android/src/main/java/com/riguz/opencv_helper/cv/: OpenCVBinding.java
android/src/main/java/com/riguz/opencv_helper/handler/: DirectExecutor.java  ExecuteException.java  MethodCallHandlerImpl.java  MethodInvoker.java  ResultExecutor.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/riguz/opencv_helper_example/: MainActivity.java
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: opencv_helper.podspec
ios/Classes/: OpenCVWrapper.h  OpenCVWrapper.mm  OpencvHelperPlugin.h  OpencvHelperPlugin.m  SwiftOpencvHelperPlugin.swift
lib/: camera_info.dart  camera_preview.dart  opencv_helper.dart
test/: opencv_helper_test.dart
